Fix minor alignment issue: dates subtitle not aligned with top of block

--- a/app/assets/stylesheets/standard-reports.scss
+++ b/app/assets/stylesheets/standard-reports.scss
@@ -95,6 +95,10 @@ input[type=radio] {
   margin-top: 3rem;
 }
 
+.u-align-top {
+  margin-top: 0;
+}
+
 .u-font-bold {
   font-weight: bold;
 }
